--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:create": "yarn build && yarn mikro-orm migration:create",
+    "migration:up": "yarn build && yarn mikro-orm migration:up",
+    "migration:dowm": "yarn build && yarn mikro-orm migration:down"
   },
   "dependencies": {
     "@mikro-orm/core": "^5.7.12",
