--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migration:create": "yarn build && yarn mikro-orm migration:create",
     "migration:up": "yarn build && yarn mikro-orm migration:up",
-    "migration:dowm": "yarn build && yarn mikro-orm migration:down"
+    "migration:dowm": "yarn build && yarn mikro-orm migration:down",
+    "seeder:run": "yarn build && yarn mikro-orm seeder:run"
   },
   "dependencies": {
     "@mikro-orm/core": "^5.7.12",
     "@mikro-orm/migrations": "^5.7.12",
     "@mikro-orm/nestjs": "^5.1.8",
     "@mikro-orm/postgresql": "^5.7.12",
+    "@mikro-orm/seeder": "^5.7.12",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
