--- a/package.json
+++ b/package.json
@@ -20,24 +20,26 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migration:create": "yarn build && yarn mikro-orm migration:create",
     "migration:up": "yarn build && yarn mikro-orm migration:up",
-    "migration:dowm": "yarn build && yarn mikro-orm migration:down",
+    "migration:down": "yarn build && yarn mikro-orm migration:down",
     "seeder:run": "yarn build && yarn mikro-orm seeder:run"
   },
   "dependencies": {
-    "@mikro-orm/core": "^5.7.12",
-    "@mikro-orm/migrations": "^5.7.12",
-    "@mikro-orm/nestjs": "^5.1.8",
-    "@mikro-orm/postgresql": "^5.7.12",
-    "@mikro-orm/seeder": "^5.7.12",
+    "@mikro-orm/core": "^5.7.14",
+    "@mikro-orm/migrations": "^5.7.14",
+    "@mikro-orm/nestjs": "^5.2.1",
+    "@mikro-orm/postgresql": "^5.7.14",
+    "@mikro-orm/seeder": "^5.7.14",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.0.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@mikro-orm/cli": "^5.7.12",
+    "@mikro-orm/cli": "^5.7.14",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
